// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders Default without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-1lvbc7v"
    >
      <div
        class="steps-wizard"
      >
        <div
          class="rcx-box rcx-box--full steps-wizard-footer rcx-css-7vikfg"
        >
          <div
            class="rcx-button-group rcx-button-group--align-start"
            role="group"
          >
            <button
              class="rcx-box rcx-box--full rcx-button rcx-button-group__item"
              disabled=""
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                Back
              </span>
            </button>
            <button
              class="rcx-box rcx-box--full rcx-button--primary rcx-button rcx-button-group__item"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                Next
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders WithAnnotation without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-1lvbc7v"
    >
      <div
        class="steps-wizard"
      >
        <div
          class="rcx-box rcx-box--full steps-wizard-footer rcx-css-7vikfg"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-kqd92f"
          >
            This is a sample annotation
          </div>
          <div
            class="rcx-button-group rcx-button-group--align-start"
            role="group"
          >
            <button
              class="rcx-box rcx-box--full rcx-button rcx-button-group__item"
              disabled=""
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                Back
              </span>
            </button>
            <button
              class="rcx-box rcx-box--full rcx-button--primary rcx-button rcx-button-group__item"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                Next
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
